--- a/app/src/main/res/layout/student_home.xml
+++ b/app/src/main/res/layout/student_home.xml
@@ -34,15 +34,18 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:id="@+id/name_txt"
                     android:text="Irfan"
                     android:textSize="20sp" />
 
                 <TextView
+                    android:id="@+id/class_txt"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Class: 10th" />
 
                 <TextView
+                    android:id="@+id/school_txt"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="School: Gopalan" />
