--- a/app/src/main/res/layout/student_home.xml
+++ b/app/src/main/res/layout/student_home.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:background="#d4d4d4"
+    android:background="@color/background"
     android:layout_height="match_parent"
     xmlns:card_view="http://schemas.android.com/apk/res-auto">
 
@@ -35,20 +35,17 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/name_txt"
-                    android:text="Irfan"
                     android:textSize="20sp" />
 
                 <TextView
                     android:id="@+id/class_txt"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Class: 10th" />
+                    android:layout_height="wrap_content" />
 
                 <TextView
                     android:id="@+id/school_txt"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="School: Gopalan" />
+                    android:layout_height="wrap_content" />
             </LinearLayout>
 
             <LinearLayout
@@ -73,15 +70,16 @@
                     android:padding="5dp" />
 
                 <TextView
+                    android:id="@+id/questionsAnswered_txt"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Total questions: 10" />
+                    android:text="Questions Answered: 10" />
 
                 <TextView
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
                     android:drawableLeft="@android:drawable/presence_online"
-
+                    android:id="@+id/correctAnswers_txt"
                     android:text="Correct answers: 6"
                     android:textSize="15sp" />
 
@@ -89,7 +87,7 @@
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
                     android:drawableLeft="@android:drawable/presence_busy"
-
+                    android:id="@+id/wrongAnswers_txt"
                     android:text="Wrong answers: 4"
                     android:textSize="15sp" />
 
@@ -121,7 +119,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
-        android:text="View Tests"
+        android:text="View Questions"
         android:textColor="@color/colorAccent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/button2"
