--- a/app/src/main/res/layout/test_page.xml
+++ b/app/src/main/res/layout/test_page.xml
@@ -34,6 +34,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:textSize="40sp"
+            android:id="@+id/questionNumber_txt"
             android:text="Question 1" />
     </androidx.cardview.widget.CardView>
 
@@ -59,6 +60,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:textSize="30sp"
+            android:id="@+id/questionBody_txt"
             android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis. Nulla facilisi etiam dignissim diam quis." />
     </androidx.cardview.widget.CardView>
 
@@ -70,7 +72,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:hint="Enter numeric answer"
-        android:inputType="numberDecimal"
+        android:inputType="numberSigned"
         android:layout_gravity="center"
         android:importantForAutofill="no" />
 
@@ -90,6 +92,7 @@
             android:layout_height="wrap_content"
             android:textColor="@color/colorPrimaryDark"
             android:layout_gravity="center"
+            android:onClick="previousQuestion"
             android:text="Previous" />
 
         <Button
@@ -98,6 +101,7 @@
             android:layout_height="wrap_content"
             android:textColor="@color/colorPrimaryDark"
             android:layout_gravity="center"
+            android:onClick="nextQuestion"
             android:text="Next" />
     </LinearLayout>
 
