Added profile button to toolbar

--- a/app/src/main/res/layout/student_home.xml
+++ b/app/src/main/res/layout/student_home.xml
@@ -144,7 +144,7 @@
             android:gravity="center"
             android:orientation="horizontal">
 
-            <Button
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/button2"
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="wrap_content"
@@ -153,6 +153,7 @@
                 android:text="Take test"
                 android:textColor="@color/colorTextPrimary"
                 android:background="@color/colorPrimary"
+                android:backgroundTint="@color/colorPrimary"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.784"
@@ -168,8 +169,6 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
-        <!-- Main content -->
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/bottom_navigation"
