--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,5 @@
     <color name="colorPrimary">#ffff00</color>
     <color name="colorPrimaryDark">#c7cc00</color>
     <color name="colorTextPrimary">#000000</color>>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorAccent">#D50000</color>
 </resources>
