--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="colorPrimary">#ffff00</color>
     <color name="colorPrimaryDark">#c7cc00</color>
+    <color name="colorPrimaryLight">#ffff5a</color>
     <color name="colorTextPrimary">#000000</color>>
     <color name="colorAccent">#D50000</color>
 </resources>
