--- a/app/src/main/res/layout/signup.xml
+++ b/app/src/main/res/layout/signup.xml
@@ -14,7 +14,7 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:background="@drawable/signup_bg_image"
+    android:background="@drawable/mathest_login_signup_bg"
     android:layout_height="match_parent"
     android:scrollbars="none">
 
@@ -42,7 +42,7 @@
             android:background="@drawable/rounded_button"
             android:backgroundTint="@color/colorPrimary"
             android:padding="5dp"
-            android:text="Your UID Is: "
+            android:text="@string/uid_display_signup"
             android:textAlignment="center"
             android:textColor="@android:color/black"
             android:textSize="20sp"
@@ -64,10 +64,10 @@
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
             android:ems="10"
-            android:textColor="@color/colorPrimary"
-            android:hint="Full Name"
+            android:textColor="@color/colorTextPrimary"
+            android:hint="@string/hint_full_name"
             android:inputType="textPersonName"
-            android:textColorHint="@color/colorPrimary"
+            android:textColorHint="@color/cardview_shadow_start_color"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.503"
@@ -88,9 +88,9 @@
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
             android:ems="10"
-            android:textColor="@color/colorPrimary"
-            android:textColorHint="@color/colorPrimary"
-            android:hint="Grade"
+            android:textColor="@color/colorTextPrimary"
+            android:textColorHint="@color/cardview_shadow_start_color"
+            android:hint="@string/hint_grade"
             android:inputType="number"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -112,9 +112,9 @@
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
             android:ems="10"
-            android:textColorHint="@color/colorPrimary"
-            android:textColor="@color/colorPrimary"
-            android:hint="School"
+            android:textColorHint="@color/cardview_shadow_start_color"
+            android:textColor="@color/colorTextPrimary"
+            android:hint="@string/hint_school"
             android:inputType="text"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -154,7 +154,7 @@
             android:background="@drawable/rounded_button"
             android:backgroundTint="@color/colorPrimary"
             android:onClick="submitDetails"
-            android:text="Submit"
+            android:text="@string/submit_details"
             android:textColor="@color/colorTextPrimary"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
