--- a/app/src/main/res/layout/student_home.xml
+++ b/app/src/main/res/layout/student_home.xml
@@ -65,7 +65,7 @@
                     android:id="@+id/accuracy_percent_txt"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Your accuracy = 0%"
+                    android:text="@string/accuracy_default"
                     android:padding="5sp"
                     android:textSize="20sp" />
                 <ProgressBar
@@ -95,7 +95,7 @@
 
                 <TextView
                     android:id="@+id/progress_txt"
-                    android:text="Your Progress = 0/10"
+                    android:text="@string/progress_default"
                     android:padding="5sp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -163,7 +163,7 @@
             android:layout_height="wrap_content"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:gravity="center"
-            android:text="Ready to Add ?"
+            android:text="@string/ready_display"
             android:textStyle="bold"
             android:textColor="@color/colorTextPrimary"
             android:textSize="30sp" />
@@ -187,7 +187,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:onClick="launchTest"
-                android:text="Let's Go!"
+                android:text="@string/lets_go_text"
                 android:textColor="@color/colorTextPrimary"
                 android:background="@color/colorPrimary"
                 android:backgroundTint="@color/colorPrimary"
