--- a/app/src/main/res/layout/student_profile.xml
+++ b/app/src/main/res/layout/student_profile.xml
@@ -53,14 +53,25 @@
                 android:orientation="vertical"
                 android:padding="10dp">
 
+                <TextView
+                    android:id="@+id/user_uid"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:textStyle="bold"
+                    android:textSize="25dp"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:textColor="@color/colorTextPrimary"
+                    android:text="@string/uid_display_signup"/>
+
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
+
                 <ImageView
                     android:layout_width="50dp"
                     android:layout_height="50dp"
-
                     app:srcCompat="@drawable/profile_icon">
 
                 </ImageView>
