--- a/app/src/main/res/layout/test_page.xml
+++ b/app/src/main/res/layout/test_page.xml
@@ -170,8 +170,37 @@
                 android:text="Submit and Next"
                 android:textColor="@color/colorTextPrimary" />
         </androidx.cardview.widget.CardView>
-
     </LinearLayout>
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="20dp"/>
+    <androidx.cardview.widget.CardView
+        android:layout_gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:cardCornerRadius="20dp"
+        android:padding="10dp"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:background="@color/cardview_dark_background"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <Button
+            android:id="@+id/buttonAdditionWorkspace"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="150dp"
+            android:layout_height="70dp"
+            android:layout_gravity="center"
+            android:background="@color/colorPrimary"
+            android:fadingEdgeLength="5dp"
+            android:foreground="?attr/selectableItemBackground"
+            android:onClick="additionWorkspace"
+            android:text="@string/editor_button"
+            android:textColor="@color/colorTextPrimary" />
+    </androidx.cardview.widget.CardView>
 
 
 </LinearLayout>
