Fetched content for working of addition

--- a/app/src/main/res/layout/activity_addition_workspace.xml
+++ b/app/src/main/res/layout/activity_addition_workspace.xml
@@ -41,7 +41,7 @@
                 app:layout_constraintTop_toTopOf="parent">
 
                 <TextView
-                    android:id="@+id/questionBody_txt"
+                    android:id="@+id/questionBodyWorkspace"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
