--- a/app/src/main/res/layout/test_page.xml
+++ b/app/src/main/res/layout/test_page.xml
@@ -65,7 +65,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:id="@+id/questionBody_txt"
+            android:id="@+id/questionBodyWorkspace"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
